VZDEV/src/objects/CCPM_customMessage__c.object
<CustomObject>
    <fields>
        <fullName>CCPM_foulWords__c</fullName>
        <label>Foul Words Found</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Custom Messages</relationshipLabel>
        <relationshipName>CCPM_customMessages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPM_messageText__c</fullName>
        <label>Message Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Send Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store</label>
        <referenceTo>CCPM_Store__c</referenceTo>
        <relationshipLabel>Custom Messages</relationshipLabel>
        <relationshipName>CCPM_customMessages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Custom Message</label>
    <nameField>
        <displayFormat>CM{00000}</displayFormat>
        <label>Custom Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>